syntax = "proto3";

package srcproto;

option go_package = "pkg/srcproto";

message Component {
  Interface interface = 1;
  map<string, Node> nodes = 2;
  repeated Connection connections = 3;
}

message Interface {
  repeated TypeParam type_params = 1;
  IO io = 2;
}

message TypeParam {
  string name = 1;
  string constr = 2;
}

message IO {
  repeated Port ins = 1;
  repeated Port outs = 2;
}

message Port {
  string type_expr = 1;
  bool is_array = 2;
}

message Node {
  EntityRef entity_ref = 1;
  repeated string type_args = 2;
  map<string, Node> component_dis = 3;
}

message EntityRef {
  string pkg = 1;
  string name = 2;
}

message Connection {
  ReceiverConnectionSide sender_side = 1;
  repeated SenderConnectionSide receiver_sides = 2;
}

message ReceiverConnectionSide {
  PortAddr port_addr = 1;
  repeated string selectors = 2;
}

message SenderConnectionSide {
  EntityRef const_ref = 1;
  PortAddr port_addr = 2;
  repeated string selectors = 3;
}

message PortAddr {
  string node = 1;
  int32 port = 2;
  int32 idx = 3;
}