syntax = "proto3";

package runtime;

option go_package = './;runtimesdk';

message Program {
	map<string, Node> nodes = 1;
	repeated Connection connections = 2;
	AbsPortAddr start_port = 3;
}

message Node {
	NodeIO io = 1;
	NodeType type = 2;
	map<string, ConstValue> const = 3;
	OpRef op_ref = 4;
}

message NodeIO {
    repeated Port in = 1;
	repeated Port out = 2;
}

message Port {
	string name = 1;
	uint32 idx  = 2;
	uint32 buf = 3;
}

enum NodeType {
	NODE_TYPE_CONST = 0;
	NODE_TYPE_OPERATOR = 1;
	NODE_TYPE_MODULE = 2;
}

message ConstValue  {
	ValueType  type = 1;
	int64 int_value = 2;
	string str_value = 3;
	bool bool_value = 4;
}

enum ValueType {
    VALUE_TYPE_INT = 0;
    VALUE_TYPE_STR = 1;
    VALUE_TYPE_BOOL = 2;
    VALUE_TYPE_SIG = 3;
}

message OpRef  {
	string pkg = 1;
    string name =2;
}

message Connection  {
	AbsPortAddr from = 1;
	repeated AbsPortAddr to = 2;
}

message AbsPortAddr {
	string Node = 1;
	string Port = 2;
	uint32 Idx  = 3;
}